<?xml version="1.0"?>
<package format="3">
  <name>stereo_odometry</name>
  <version>0.0.1</version>
  <description>ROS2 Stereo Visual Odometry Node</description>
  <maintainer email="gautam1311@yahoo.com">Gautam Dobariya</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>yaml-cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
